--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<button onclick='play_music()'>Play music</button>
+	<audio src = 'videoplayback (2) (online-audio-converter.com).mp3' id="music"></audio>
 	<progress id="health" value="100" max="100" ></progress>
 	<canvas id="game_area" >
 	</canvas>
