response mobile modified

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         new WOW().init();
     </script>
-    <title>Document</title>
+    <title>UVI</title>
 </head>
 <body>
     <header>
@@ -29,7 +29,7 @@
     <div id = "start">
         <p class="intro_title">​Your Visual Independence</p>
         <p class="intro_txt"> Aplikacja, która jest oczami osób niewidomych i słabowidzących</p>
-        <button class = "introbutton"><span class = "btn_txt">Skontaktuj się z nami</span></button>
+        <a href="#contact"><button class = "introbutton"><span class = "btn_txt">Skontaktuj się z nami</span></button></a>
     </div>
     <article id="problematics">
         <h4 id="problematic_head" class=" wow animate__animated animate__fadeInUp">Jaki problem adresujemy?</h4>
@@ -55,9 +55,9 @@
         <div class="tech_wrraper">
                 <h4 id="technologie_title">​Technologia</h4>
                 <p class="technologie_txt">​Aplikacja oparta na sztucznej inteligencji i sieciach neuronowych, które już dawno nie są z zakresu fantastyki</p>
-                <button class="technologie_btn">
+                <a href="#contact"><button class="technologie_btn">
                     <span id="technologie_btn_txt">Skontaktuj się z nami</span>
-                </button>
+                </button></a>
         </div>
         <img id = "code_example" src="img/tech_code.jpeg" alt="technologie_code_example" class="wow animate__animated animate__fadeInRight">
     </article>
@@ -77,38 +77,38 @@
                 </div>
                 <div class="road_map_content_item">
                     <img src="img/Circle_2.png" alt="" class="road_map_item_img">
-                    <h6 class="road_map_item_title">​Rekrutacja</h6>
-                    <p class="road_map_item_content">​Zatrudnienie specjalistów Podział obowiązków</p>
+                    <h6 class="road_map_item_title">​Tworzenie prototypu</h6>
+                    <p class="road_map_item_content">​Zbieranie danych do uczenia sieci Trenowanie sieci neuronowej</p>
                     <hr class="road_map_item_line">
                     <p class="road_map_item_time">2-3 miesiące</p>
                 </div>
                 <div class="road_map_content_item">
                     <img src="img/Circle_3.png" alt="" class="road_map_item_img">
-                    <h6 class="road_map_item_title">​Rekrutacja</h6>
-                    <p class="road_map_item_content">​Zatrudnienie specjalistów Podział obowiązków</p>
+                    <h6 class="road_map_item_title">​Tworzenie interfejsu</h6>
+                    <p class="road_map_item_content">​Projektowanie interfejsu Wdrożenie do aplikacji</p>
                     <hr class="road_map_item_line">
-                    <p class="road_map_item_time">2-3 miesiące</p>
+                    <p class="road_map_item_time">1 miesiąc</p>
                 </div>
                 <div class="road_map_content_item">
                     <img src="img/Circle_4.png" alt="" class="road_map_item_img">
-                    <h6 class="road_map_item_title">​Rekrutacja</h6>
-                    <p class="road_map_item_content">​Zatrudnienie specjalistów Podział obowiązków</p>
+                    <h6 class="road_map_item_title">​Testowanie</h6>
+                    <p class="road_map_item_content">​Na pracownikach Na ochotnikach</p>
                     <hr class="road_map_item_line">
-                    <p class="road_map_item_time">2-3 miesiące</p>
+                    <p class="road_map_item_time">2-6 miesiące</p>
                 </div>
                 <div class="road_map_content_item">
                     <img src="img/Circle_5.png" alt="" class="road_map_item_img">
-                    <h6 class="road_map_item_title">​Rekrutacja</h6>
-                    <p class="road_map_item_content">​Zatrudnienie specjalistów Podział obowiązków</p>
+                    <h6 class="road_map_item_title">​Poprawa błędów</h6>
+                    <p class="road_map_item_content">​Usuwanie błędów wykrytych podczas testowania</p>
                     <hr class="road_map_item_line">
-                    <p class="road_map_item_time">2-3 miesiące</p>
+                    <p class="road_map_item_time">1-2 miesiące</p>
                 </div>
                 <div class="road_map_content_item">
                     <img src="img/Circle_6.png" alt="" class="road_map_item_img">
-                    <h6 class="road_map_item_title">​Rekrutacja</h6>
-                    <p class="road_map_item_content">​Zatrudnienie specjalistów Podział obowiązków</p>
+                    <h6 class="road_map_item_title">​Wejście na rynek</h6>
+                    <p class="road_map_item_content">​Dodanie aplikacji do App Store/Google Play</p>
                     <hr class="road_map_item_line">
-                    <p class="road_map_item_time">2-3 miesiące</p>
+                    <p class="road_map_item_time">​1-2 tygodnie</p>
                 </div>
             </div>
         </div>
