--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <script>
         new WOW().init();
     </script>
-    <title>Document</title>
+    <script src="js/slider.js"></script>
+    <title>UVI</title>
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
     <div id = "start">
         <p class="intro_title">​Your Visual Independence</p>
         <p class="intro_txt"> Aplikacja, która jest oczami osób niewidomych i słabowidzących</p>
-        <button class = "introbutton"><span class = "btn_txt">Skontaktuj się z nami</span></button>
+        <a href="#contact"><button class = "introbutton"><span class = "btn_txt">Skontaktuj się z nami</span></button></a>
     </div>
     <article id="problematics">
         <h4 id="problematic_head" class=" wow animate__animated animate__fadeInUp">Jaki problem adresujemy?</h4>
@@ -55,9 +56,9 @@
         <div class="tech_wrraper">
                 <h4 id="technologie_title">​Technologia</h4>
                 <p class="technologie_txt">​Aplikacja oparta na sztucznej inteligencji i sieciach neuronowych, które już dawno nie są z zakresu fantastyki</p>
-                <button class="technologie_btn">
+                <a href="#contact"><button class="technologie_btn">
                     <span id="technologie_btn_txt">Skontaktuj się z nami</span>
-                </button>
+                </button></a>
         </div>
         <img id = "code_example" src="img/tech_code.jpeg" alt="technologie_code_example" class="wow animate__animated animate__fadeInRight">
     </article>
@@ -77,38 +78,38 @@
                 </div>
                 <div class="road_map_content_item">
                     <img src="img/Circle_2.png" alt="" class="road_map_item_img">
-                    <h6 class="road_map_item_title">​Rekrutacja</h6>
-                    <p class="road_map_item_content">​Zatrudnienie specjalistów Podział obowiązków</p>
+                    <h6 class="road_map_item_title">​Tworzenie prototypu</h6>
+                    <p class="road_map_item_content">​Zbieranie danych do uczenia sieci Trenowanie sieci neuronowej</p>
                     <hr class="road_map_item_line">
                     <p class="road_map_item_time">2-3 miesiące</p>
                 </div>
                 <div class="road_map_content_item">
                     <img src="img/Circle_3.png" alt="" class="road_map_item_img">
-                    <h6 class="road_map_item_title">​Rekrutacja</h6>
-                    <p class="road_map_item_content">​Zatrudnienie specjalistów Podział obowiązków</p>
+                    <h6 class="road_map_item_title">​Tworzenie interfejsu</h6>
+                    <p class="road_map_item_content">​Projektowanie interfejsu Wdrożenie do aplikacji</p>
                     <hr class="road_map_item_line">
-                    <p class="road_map_item_time">2-3 miesiące</p>
+                    <p class="road_map_item_time">1 miesiąc</p>
                 </div>
                 <div class="road_map_content_item">
                     <img src="img/Circle_4.png" alt="" class="road_map_item_img">
-                    <h6 class="road_map_item_title">​Rekrutacja</h6>
-                    <p class="road_map_item_content">​Zatrudnienie specjalistów Podział obowiązków</p>
+                    <h6 class="road_map_item_title">​Testowanie</h6>
+                    <p class="road_map_item_content">​Na pracownikach Na ochotnikach</p>
                     <hr class="road_map_item_line">
-                    <p class="road_map_item_time">2-3 miesiące</p>
+                    <p class="road_map_item_time">2-6 miesiące</p>
                 </div>
                 <div class="road_map_content_item">
                     <img src="img/Circle_5.png" alt="" class="road_map_item_img">
-                    <h6 class="road_map_item_title">​Rekrutacja</h6>
-                    <p class="road_map_item_content">​Zatrudnienie specjalistów Podział obowiązków</p>
+                    <h6 class="road_map_item_title">​Poprawa błędów</h6>
+                    <p class="road_map_item_content">​Usuwanie błędów wykrytych podczas testowania</p>
                     <hr class="road_map_item_line">
-                    <p class="road_map_item_time">2-3 miesiące</p>
+                    <p class="road_map_item_time">1-2 miesiące</p>
                 </div>
                 <div class="road_map_content_item">
                     <img src="img/Circle_6.png" alt="" class="road_map_item_img">
-                    <h6 class="road_map_item_title">​Rekrutacja</h6>
-                    <p class="road_map_item_content">​Zatrudnienie specjalistów Podział obowiązków</p>
+                    <h6 class="road_map_item_title">​Wejście na rynek</h6>
+                    <p class="road_map_item_content">​Dodanie aplikacji do App Store/Google Play</p>
                     <hr class="road_map_item_line">
-                    <p class="road_map_item_time">2-3 miesiące</p>
+                    <p class="road_map_item_time">​1-2 tygodnie</p>
                 </div>
             </div>
         </div>
@@ -118,21 +119,21 @@
         <div class="team_details_wrraper wow animate__animated animate__fadeIn">
             <div class="team_details_item">
                 <div class="team_img_wrraper">
-                    <img src="img/MO.jpg" alt="" class="team_img">
+                    <img src="img/VY.jpg" id="yanch"class="team_img">
                 </div>
-                <h6 class="team_name">Makar Oliinyk</h6>
+                <h6 class="team_name">Vitalii Yanch</h6>
                 <p class="team_member_responsobility">IT</p>
             </div>
             <div class="team_details_item">
                 <div class="team_img_wrraper">
-                    <img src="img/TB.jpg" alt="" class="team_img">
+                    <img src="img/TB.jpg" class="team_img">
                 </div>
                 <h6 class="team_name">Tetiana Berehova</h6>
                 <p class="team_member_responsobility">Analityka finansowa</p>
             </div>
             <div class="team_details_item">
                 <div class="team_img_wrraper">
-                    <img src="img/LK.jpg" alt="" class="team_img">
+                    <img src="img/LK.jpg" class="team_img">
                 </div>
                 <h6 class="team_name">Liliia Karaban</h6>
                 <p class="team_member_responsobility">Marketing i komunikacja</p>
@@ -142,13 +143,13 @@
     <article id="offer">
         <h6 id="offer_title" class="wow animate__animated animate__fadeInDown animate__delay-2s">​Szukasz projektu, który ma zarówno duszę, jak i potencjał biznesowy? Zainwestuj w startup UVI i połącz przyjemne z pożytecznym</h6>
         <div id="offer_content_wrraper" class="wow animate__animated animate__fadeIn">
-            <div class="offer_content_item"id='offer_img1'>
+            <div class="offer_content_item img1 show"id='offer_img1'>
                 <span class="offer_content_txt">​Zyski po 1 roku działania aplikacji</span>
             </div>
-            <div class="offer_content_item"id='offer_img2'>
+            <div class="offer_content_item img2" id='offer_img2'>
                 <span class="offer_content_txt">​Tworzenie lepszej przyszłości</span>
             </div>
-            <div class="offer_content_item"id='offer_img3'>
+            <div class="offer_content_item img3" id='offer_img3'>
                 <span class="offer_content_txt">​Ulepszenie wizerunku Twojej firmy</span>
             </div>
         </div>
@@ -163,7 +164,7 @@
                 <input type="text" id='number' placeholder="Numer telefonu">
                 <textarea name="massege" id="massege" rows="6" placeholder="Wiadomość"></textarea>
                 <div id="btn_wrraper">
-                    <button type="submit">Kontakt</button>
+                    <button type="submit"><span id="btn_txt">Kontakt</span></button>
                 </div>
             </form>
         </div>
@@ -175,9 +176,9 @@
         <div class="footer_wrraper">
             <nav class="menu_footer">
                 <ul class = "menu_list_footer">
-                    <li><a href="#start">Do góry</a></li>
-                    <li><a href="#road_map">Droga rozwoju</a></li>
-                    <li><a href="#team">Nasz zespół</a></li>
+                    <li class="footer_menu"><a href="#start">Do góry</a></li>
+                    <li class="footer_menu"><a href="#road_map">Droga rozwoju</a></li>
+                    <li class="footer_menu"><a href="#team">Nasz zespół</a></li>
                 </ul>
             </nav>
         </div>
