--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script>
         new WOW().init();
     </script>
+    <script src="js/slider.js"></script>
     <title>UVI</title>
 </head>
 <body>
@@ -118,21 +119,21 @@
         <div class="team_details_wrraper wow animate__animated animate__fadeIn">
             <div class="team_details_item">
                 <div class="team_img_wrraper">
-                    <img src="img/MO.jpg" alt="" class="team_img">
+                    <img src="img/VY.jpg" id="yanch"class="team_img">
                 </div>
-                <h6 class="team_name">Makar Oliinyk</h6>
+                <h6 class="team_name">Vitalii Yanch</h6>
                 <p class="team_member_responsobility">IT</p>
             </div>
             <div class="team_details_item">
                 <div class="team_img_wrraper">
-                    <img src="img/TB.jpg" alt="" class="team_img">
+                    <img src="img/TB.jpg" class="team_img">
                 </div>
                 <h6 class="team_name">Tetiana Berehova</h6>
                 <p class="team_member_responsobility">Analityka finansowa</p>
             </div>
             <div class="team_details_item">
                 <div class="team_img_wrraper">
-                    <img src="img/LK.jpg" alt="" class="team_img">
+                    <img src="img/LK.jpg" class="team_img">
                 </div>
                 <h6 class="team_name">Liliia Karaban</h6>
                 <p class="team_member_responsobility">Marketing i komunikacja</p>
@@ -142,13 +143,13 @@
     <article id="offer">
         <h6 id="offer_title" class="wow animate__animated animate__fadeInDown animate__delay-2s">​Szukasz projektu, który ma zarówno duszę, jak i potencjał biznesowy? Zainwestuj w startup UVI i połącz przyjemne z pożytecznym</h6>
         <div id="offer_content_wrraper" class="wow animate__animated animate__fadeIn">
-            <div class="offer_content_item"id='offer_img1'>
+            <div class="offer_content_item img1 show"id='offer_img1'>
                 <span class="offer_content_txt">​Zyski po 1 roku działania aplikacji</span>
             </div>
-            <div class="offer_content_item"id='offer_img2'>
+            <div class="offer_content_item img2" id='offer_img2'>
                 <span class="offer_content_txt">​Tworzenie lepszej przyszłości</span>
             </div>
-            <div class="offer_content_item"id='offer_img3'>
+            <div class="offer_content_item img3" id='offer_img3'>
                 <span class="offer_content_txt">​Ulepszenie wizerunku Twojej firmy</span>
             </div>
         </div>
@@ -163,7 +164,7 @@
                 <input type="text" id='number' placeholder="Numer telefonu">
                 <textarea name="massege" id="massege" rows="6" placeholder="Wiadomość"></textarea>
                 <div id="btn_wrraper">
-                    <button type="submit">Kontakt</button>
+                    <button type="submit"><span id="btn_txt">Kontakt</span></button>
                 </div>
             </form>
         </div>
@@ -175,9 +176,9 @@
         <div class="footer_wrraper">
             <nav class="menu_footer">
                 <ul class = "menu_list_footer">
-                    <li><a href="#start">Do góry</a></li>
-                    <li><a href="#road_map">Droga rozwoju</a></li>
-                    <li><a href="#team">Nasz zespół</a></li>
+                    <li class="footer_menu"><a href="#start">Do góry</a></li>
+                    <li class="footer_menu"><a href="#road_map">Droga rozwoju</a></li>
+                    <li class="footer_menu"><a href="#team">Nasz zespół</a></li>
                 </ul>
             </nav>
         </div>
